--- a/TestFirebase/app/src/main/res/layout/activity_main.xml
+++ b/TestFirebase/app/src/main/res/layout/activity_main.xml
@@ -57,14 +57,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/History"
-        android:layout_width="252dp"
-        android:layout_height="294dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerviewHistory"
+        android:layout_width="363dp"
+        android:layout_height="517dp"
+        app:layout_constraintBottom_toTopOf="@+id/text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ReadBD" />
+        app:layout_constraintTop_toBottomOf="@+id/name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
